* Version 2.2.2 (unreleased)

* Version 2.2.1 (released 2015-08-20)
 ** Bugfix release: Fix adding credentials via the UI.

* Version 2.2.0 (released 2015-08-18)
 ** Allow spaces in OATH keys.
 ** Don't crash if smartcard subsystem isn't available.
 ** Disable systray icon by default.
 ** Added a flag to start the application minimized to the systray.
 ** Added the ability to scan QR codes from the screen.

* Version 2.1.1 (released 2015-07-02)
 ** Added man pages.
 ** Fixed bug with non-CCID YubiKeys not displaying slot-bsed credentials.
 ** Windows installer/uninstaller checks for running instance, and closes it.

* Version 2.1.0 (released 2015-06-26)
 ** Added setting to kill scdaemon on show, to release the device (GUI only).
 ** Added the ability to program standard YubiKeys with slot-based TOTP
    credentials.
 ** Added functionality to the CLI for programming YubiKeys.
 ** Added the reset command for wiping a device (CLI only).
 ** Better handling of composite modes.
 ** Support non-ascii characters in card reader names.

* Version 2.0.2 (released 2015-06-16)
 ** Minor packaging related fixes.

* Version 2.0.1 (released 2015-06-16)
 ** Minor fixes to platform specific quirks.

* Version 2.0.0 (released 2015-06-15)
 ** Complete rewrite
    - Supports all OATH-enabled YubiKeys, including YubiKey Standard.
    - New overhauled UI.